--- a/src/route/entry/style.less
+++ b/src/route/entry/style.less
@@ -1,22 +1,20 @@
 .root {
   width: var(--width);
+  height: 100%;
   margin: auto;
   padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .main {
   display: flex;
 }
 
-.left {
-  flex: 1;
-}
-
-.right {
-  width: 334px;
-  margin-left: 20px;
-}
-
-.workflow {
-  margin-top: var(--gap);
+.svg {
+  width: 750px;
+  height: 750px;
+  display: block;
+  margin: auto;
 }
