--- a/src/route/entry/style.less
+++ b/src/route/entry/style.less
@@ -1,20 +1,12 @@
 .root {
-  width: var(--width);
+  width: 100%;
   height: 100%;
-  margin: auto;
-  padding: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.main {
-  display: flex;
-}
-
-.svg {
-  width: 750px;
-  height: 750px;
-  display: block;
-  margin: auto;
+.map {
+  width: 100%;
+  height: 100%;
 }
