--- a/src/style.less
+++ b/src/style.less
@@ -1,4 +1,4 @@
-@import "~antd/dist/antd.less";
+@import (css,inline) "react-responsive-carousel/lib/styles/carousel.min.css";
 
 html, body {
   width: 100%;
