--- a/src/route/entry/style.less
+++ b/src/route/entry/style.less
@@ -1,12 +1,17 @@
 .root {
   width: 100%;
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  grid-template-rows: auto 1fr;
 }
 
-.map {
-  width: 100%;
-  height: 100%;
+.action {
+  display: block;
+  grid-auto-flow: column;
+}
+
+.gallery {
+  display: grid;
+  grid-gap: 4px;
+  grid-template-columns: repeat(4, 1fr);
 }
