--- a/src/route/entry/style.less
+++ b/src/route/entry/style.less
@@ -2,16 +2,31 @@
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-rows: auto 1fr;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  align-items: center;
+  justify-content: center;
+}
+
+.main {
+  width: 100%;
+  height: 100%;
+  max-height: 60%;
+  max-width: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-self: center;
 }
 
 .action {
-  display: block;
-  grid-auto-flow: column;
+  flex-shrink: 0;
 }
 
 .gallery {
+  flex: 1;
   display: grid;
-  grid-gap: 4px;
+  gap: 2px;
   grid-template-columns: repeat(4, 1fr);
+  background-color: aquamarine;
+  margin-top: 12px;
 }
