--- a/src/route/entry/style.less
+++ b/src/route/entry/style.less
@@ -6,12 +6,11 @@
   grid-template-rows: 1fr;
   align-items: center;
   justify-content: center;
+  padding: 16px;
 }
 
 .main {
   width: 100%;
-  height: 100%;
-  max-height: 60%;
   max-width: 500px;
   display: flex;
   flex-direction: column;
@@ -29,4 +28,5 @@
   grid-template-columns: repeat(4, 1fr);
   background-color: aquamarine;
   margin-top: 12px;
+  min-height: 500px;
 }
