--- a/src/route/entry/convertor/style.less
+++ b/src/route/entry/convertor/style.less
@@ -1,19 +1,24 @@
 .root {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
+  display: table;
+  table-layout: fixed;
+  width: 100%;
+  border: 1px dashed #28775d;
+  border-radius: 4px;
 
-  &:hover {
-    .close {
-      display: block;
-    }
+  & > * {
+    display: table-cell;
+    vertical-align: middle;
+    align-items: center;
+    text-align: center;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    word-break: break-all;
 
-    .download {
-      display: flex;
+    & > * {
+      width: 100%;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
 }
@@ -36,23 +41,16 @@
 }
 
 .download {
-  background-color: rgba(0, 0, 0, .5);
-  position: absolute;
-  width: 100%;
-  height: 30px;
-  bottom: 0;
-  left: 0;
-  align-items: center;
-  justify-content: center;
-  display: none;
+  i {
+    color: #28775d;
+    cursor: pointer;
+  }
+}
 
-  button {
-    color: #fff;
-    padding: 0;
-
-    &:hover {
-      color: #fff;
-    }
+.delete {
+  i {
+    color: #ec5f27;
+    cursor: pointer;
   }
 }
 
