--- a/src/route/entry/style.less
+++ b/src/route/entry/style.less
@@ -24,9 +24,27 @@
 .gallery {
   flex: 1;
   display: grid;
-  gap: 2px;
-  grid-template-columns: repeat(4, 1fr);
-  background-color: aquamarine;
+  gap: 4px 0;
+  grid-template-rows: repeat(8, 1fr);
   margin-top: 12px;
   min-height: 500px;
+  overflow: auto;
+}
+
+.acceptor {
+  width: 100%;
+  height: 200px;
+  border: 2px dashed gray;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+
+  & > p {
+    margin: 10px 0 0;
+    padding: 0;
+    color: #607d8b;
+  }
 }
